--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,17 +1,32 @@
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 3rem;
-    padding: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 3rem;
+  padding: 5rem;
+  background-color: var(--primary-dark);
 }
 .container h1 {
-    font-size: 10rem;
-    font-weight: bolder;
+  font-size: 5rem;
+  font-weight: bolder;
+}
+.containerImg img {
+  height: auto;
+  width: 100%;
+  max-width: 20rem;
 }
 
-.containerImg img{
-    height: auto;
-    width: 100%;
-    max-width: 20rem;
+.cartInfo {
+  border-radius: 3rem;
+  background-color: var(--primary-light);
+  color: var(--primary-contrast-dark);
+  padding: 2rem;
+  font-size: 3rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.link {
+  text-decoration: none;
+  color: var(--primary);
 }
