--- a/src/components/Product.module.css
+++ b/src/components/Product.module.css
@@ -1,47 +1,43 @@
-/* src/components/Product.module.css */
 .productCard {
-  width: 300px;
-  border: 1px solid #ddd;
-  padding: 1rem;
-  border-radius: 8px;
+  border: 0.25rem solid var(--primary);
+  border-radius: 5rem;
+  padding: 2rem;
   text-align: center;
-  background-color: #fff;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  background-color: var(--gray-100);
 }
 
 .productImage {
   width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 4px;
+  border-radius: 0.5rem;
 }
 
 .productTitle {
-  font-size: 1.2rem;
-  margin: 0.5rem 0;
-}
-
-.productPrice {
+  font-size: 3rem;
   font-weight: bold;
   margin: 0.5rem 0;
 }
 
 .productDescription {
-  font-size: 0.9rem;
-  color: #555;
-  margin-bottom: 1rem;
+  font-size: 2rem;
+  color: var(--primary-dark);
 }
 
-.addToCartButton {
-  background-color: #007bff;
-  color: white;
+.productPrice {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 2rem 0;
+}
+
+.productButton {
+  background-color: var(--primary);
+  color: var(--gray-900);
   border: none;
-  padding: 0.6rem 1rem;
-  border-radius: 4px;
+  padding: 1rem 2rem;
+  border-radius: 1rem;
   cursor: pointer;
-  transition: 0.2s;
+  font-size: 2rem;
 }
 
-.addToCartButton:hover {
-  background-color: #0056b3;
+.productButton:hover {
+  background-color: var(--primary-dark);
 }
