--- a/src/components/ProductList.module.css
+++ b/src/components/ProductList.module.css
@@ -3,12 +3,13 @@
   flex-direction: column;
   align-items: center;
   padding: 2rem;
+  gap: 2rem;
 }
 
-.productGrid {
+.productList {
+  padding: 1rem 3rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 2rem;
-  width: 100%;
-  max-width: 1200px;
+  gap: 3rem;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  grid-template-rows: repeat(auto-fit, min-content);
 }
