--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -3,17 +3,30 @@
   align-items: center;
   justify-content: space-between;
   gap: 3rem;
+  height: 15rem;
   padding: 5rem;
   background-color: var(--primary-dark);
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
 }
+
 .container h1 {
   font-size: 5rem;
   font-weight: bolder;
 }
+
 .containerImg img {
   height: auto;
   width: 100%;
   max-width: 20rem;
+}
+
+.container p {
+  font-size: 1.5rem;
 }
 
 .cartInfo {
@@ -29,4 +42,22 @@
 .link {
   text-decoration: none;
   color: var(--primary);
+}
+
+.cartIcon {
+  position: relative;
+  display: inline-block;
+}
+
+.cartCount {
+  position: absolute;
+  top: -0.8rem;
+  right: -2rem;
+  font-size: 1.5rem;
+  border-radius: 1rem;
+  background-color: var(--primary-dark);
+  color: var(--gray-100);
+  padding: 0.2rem 0.6rem;
+  font-weight: bold;
+  z-index: 1;
 }
