--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,7 +1,7 @@
 :root {
-  --primary: #f49097;
-  --primary-light: #fcd6da;
-  --primary-dark: #a04e56;
+  --primary: #f490de;
+  --primary-light: #fcd6f9ef;
+  --primary-dark: #ff79f8;
   --primary-contrast-light: #fff;
   --primary-contrast-dark: #000000;
   
