--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -5,7 +5,7 @@
   gap: 3rem;
   height: 15rem;
   padding: 5rem;
-  background-color: var(--primary-dark);
+  background-color: var(--primary);
 
   position: fixed;
   top: 0;
@@ -17,6 +17,26 @@
 .container h1 {
   font-size: 5rem;
   font-weight: bolder;
+  color: var(--background);
+}
+
+.actions {
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  gap: 2rem;
+}
+
+.link {
+  font-size: 2rem;
+  text-decoration: none;
+  color: var(--primary);
+  color: var(--text);
+  transition: color 0.3s;
+}
+
+.link:hover {
+  color: var(--primary-dark);
 }
 
 .containerImg img {
@@ -39,11 +59,6 @@
   text-align: center;
 }
 
-.link {
-  text-decoration: none;
-  color: var(--primary);
-}
-
 .cartIcon {
   position: relative;
   display: inline-block;
@@ -60,4 +75,15 @@
   padding: 0.2rem 0.6rem;
   font-weight: bold;
   z-index: 1;
+}
+
+.welcomeMessage {
+  font-size: 1.5rem;
+  color: var(--text);
+  margin-right: 1rem;
+  text-decoration: none;
+}
+
+.welcomeMessage:hover {
+  text-decoration: underline;
 }
