--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -15,3 +15,25 @@
   --gray-800: #343a40;
   --gray-900: #212529;
 }
+
+:root[data-theme="dark"] {
+  --primary: #a83f8e;               
+  --primary-light: #4d2145;         
+  --primary-dark: #c85dbc;          
+  --primary-contrast: #ffffff;
+
+  --background: #1a1a1a;
+  --text: #f8f9fa;
+  
+  /* Cinzas invertidos */
+  --gray-900: #212529;
+  --gray-800: #343a40;
+  --gray-700: #495057;
+  --gray-600: #6c757d;
+  --gray-500: #adb5bd;
+  --gray-400: #ced4da;
+  --gray-300: #dee2e6;
+  --gray-200: #e9ecef;
+  --gray-100: #f8f9fa;
+}
+
